<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:padding="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp" 
                android:text="@string/str_distributor" />
            
            <Spinner
	            android:id="@+id/spinner_distributor"
	            android:spinnerMode="dropdown"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp" 
                android:text="@string/str_nm_op" />
            
            <AutoCompleteTextView
		        android:id="@+id/edittext_nm_op2"
		        android:layout_width="135dp"
		        android:layout_height="wrap_content"
		        android:hint="@string/nm_op_hint"
		        android:inputType="text" >
		        
		    </AutoCompleteTextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp" 
                android:text="@string/str_kode_op" />
            
            <EditText
		        android:id="@+id/edittext_kode_op"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/kode_op_hint"
		        android:inputType="text" >
		    </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp" 
                android:text="@string/str_nominal" />
            
            <EditText
		        android:id="@+id/edittext_nominal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/nominal_op_hint"
		        android:inputType="text" >
		    </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp" 
                android:text="@string/str_hrg_beli" />
            
            <EditText
		        android:id="@+id/edittext_hrg_beli"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/hrgbeli_op_hint"
		        android:inputType="number" >
		    </EditText>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp" 
                android:text="@string/str_hrg_jual" />
            
            <EditText
		        android:id="@+id/edittext_hrg_jual"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/hrgjual_op_hint"
		        android:inputType="number" >
		    </EditText>
        </TableRow>
        
    </TableLayout>

</LinearLayout>
</ScrollView>
