<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="30dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/str_input1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/str_input2" />

    <EditText
        android:id="@+id/edittext_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:hint="@string/txt_reset_pass"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#5d6153"
        android:textSize="15sp"
        android:shadowRadius="0.6"
        android:shadowDx="1"
        android:shadowDy="1"
        android:padding="10dp"
        android:background="@drawable/custom_btn_blue"
        android:text="@string/str_reset" />

</LinearLayout>
