<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
<LinearLayout
    android:id="@+id/my_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    
    <TableLayout 
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
    	android:layout_marginRight="0dp"
    	android:layout_marginTop="15dp"
        android:orientation="vertical" >
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp" 
                android:text="@string/str_distributor" />
            
            <Spinner
	            android:id="@+id/spinner_cek_saldo"
	            android:spinnerMode="dropdown"
	            android:layout_marginLeft="25dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp" 
                android:text="@string/str_format_sms" />
            
            <EditText
				android:id="@+id/edtFormatSaldo"
				android:layout_width="100dp"
				android:layout_marginLeft="25dp"
				android:hint="@string/str_format"
				android:layout_height="wrap_content"
				android:inputType="text" >
			</EditText>
			
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp" 
                android:text="@string/str_format_pin" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp" 
                android:text="@string/str_separator" />
            
            <EditText
				android:id="@+id/edtSeparator"
				android:layout_width="100dp"
				android:layout_marginLeft="25dp"
				android:layout_height="wrap_content"
				android:inputType="text" >
			</EditText>
            
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
	            android:id="@+id/textViewAddFilter"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#CCCCCC"
	            android:text="@string/str_addpembeli" />
        </TableRow>
        
        <LinearLayout
		    android:id="@+id/contentFilter"
		    android:animateLayoutChanges="true"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:orientation="vertical" >
        
		</LinearLayout>
        
    </TableLayout>
    
</LinearLayout>
</ScrollView>