<?xml version="1.0" encoding="utf-8"?>   
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1.0"
    android:background="@drawable/bg_home"
    android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/textview_welcome"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/txt_welcome" />

		    <TextView
		        android:id="@+id/txt_nama"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:textStyle="bold"
		        android:text="@string/txt_nama" />
            
        </TableRow>
        
        <ScrollView
     		    android:id="@+id/scrollView1"
     		    android:layout_width="fill_parent"
     		    android:layout_height="0dp"
     		    android:layout_weight="1.0" >

     		    <LinearLayout
     		        android:id="@+id/Linear1"
     		        android:layout_width="match_parent"
     		        android:layout_height="wrap_content"
     		        android:orientation="vertical" >
     		        
     		        <TableRow
			            android:id="@+id/tableRow2"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<ImageView
				            android:id="@+id/imageView1"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginRight="10dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_fix_dataop" />
			     		
			     		<ImageView
				            android:id="@+id/imageView2"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginLeft="10dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_fix_transaksi" />
			        </TableRow>
			        
     		        <TableRow
			            android:id="@+id/tableRowx1"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<TextView
					        android:id="@+id/textview_1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingRight="15dp"
					        android:paddingLeft="10dp"
					        android:text="@string/ttl_data_op" />
			     		<TextView
					        android:id="@+id/textview_2"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="35dp"
					        android:text="@string/ttl_trans" />
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRow3"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<ImageView
				            android:id="@+id/imageView3"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginRight="10dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_fix_pembeli" />
			     		
			     		<ImageView
				            android:id="@+id/imageView4"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginLeft="10dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_fix_status" />
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRowx2"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<TextView
					        android:id="@+id/textview_3"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingRight="25dp"
					        android:paddingLeft="22dp"
					        android:text="@string/ttl_pembeli" />
			     		<TextView
					        android:id="@+id/textview_4"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="15dp"
					        android:text="@string/ttl_status" />
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRow4"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			     		
			     		<ImageView
				            android:id="@+id/imageView6"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginLeft="15dp"
				            android:layout_marginRight="20dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_fix_broadcast" />
			     		
			     		<ImageView
				            android:id="@+id/imageView5"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginRight="20dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_fix_laporan" />
			     		
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRowx3"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<TextView
					        android:id="@+id/textview_6"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="20dp"
					        android:paddingRight="30dp"
					        android:text="@string/ttl_broadcast" />
			     		
			     		<TextView
					        android:id="@+id/textview_5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingRight="20dp"
					        android:text="@string/ttl_laporan" />
			     		
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRow55"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<ImageView
				            android:id="@+id/imageView7"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginRight="10dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_saldo" />
			     		
			     		<ImageView
				            android:id="@+id/imageView8"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginLeft="10dp"
				            android:contentDescription="@string/str_ic_add"
				            android:src="@drawable/ic_deposit" />
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRowx4"
			            android:layout_marginTop="0dp"
			            android:paddingBottom="10dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<TextView
					        android:id="@+id/textview_7"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="15dp"
					        android:paddingRight="20dp"
					        android:text="@string/ttl_saldo" />
			     		<TextView
					        android:id="@+id/textview_8"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="20dp"
					        android:text="@string/deposit" />
			        </TableRow>
     		        
     		    </LinearLayout>
     		    
     	</ScrollView>

</LinearLayout>
